legion/compiler/y.output
Grammar

    0 $accept: Program $end

    1 Program: Stmt
    2        | Program Stmt

    3 Stmt: ProcCustom
    4     | RegionCustom
    5     | LayoutCustom
    6     | InstanceLimit
    7     | MemoryCollect
    8     | FuncDef
    9     | IndexTaskMap
   10     | Assign_Stmt
   11     | Print_Stmt

   12 Identifier_star: T_Identifier
   13                | '*'

   14 Identifier_List: T_Identifier ',' T_Identifier
   15                | Identifier_List ',' T_Identifier

   16 InstanceLimit: T_Instance T_Identifier Proc T_IntConstant ';'

   17 MemoryCollect: T_Collect Identifier_star Identifier_star ';'

   18 ProcCustom: T_Task Identifier_star ProcLst ';'

   19 RegionCustom: T_Region Identifier_star Identifier_star Proc MemLst ';'
   20             | T_Region Identifier_star Identifier_star Identifier_star MemLst ';'

   21 LayoutCustom: T_Layout Identifier_star Identifier_star Mem Constraints ';'
   22             | T_Layout Identifier_star Identifier_star Identifier_star Constraints ';'

   23 Constraints: %empty
   24            | Constraints T_Reverse_Dimension
   25            | Constraints T_Positive_Dimension
   26            | Constraints T_AOS
   27            | Constraints T_SOA
   28            | Constraints T_Compact
   29            | Constraints T_Align '<' T_IntConstant
   30            | Constraints T_Align T_Le T_IntConstant
   31            | Constraints T_Align '>' T_IntConstant
   32            | Constraints T_Align T_Ge T_IntConstant
   33            | Constraints T_Align T_Eq T_IntConstant
   34            | Constraints T_Align T_Ne T_IntConstant

   35 FuncDef: T_Def T_Identifier '(' ArgLst ')' '{' Func_Stmts '}'

   36 IndexTaskMap: T_IndexTaskMap Identifier_star T_Identifier ';'
   37             | T_IndexTaskMap Identifier_List T_Identifier ';'

   38 Assign_Stmt: T_Identifier '=' Expr ';'

   39 Func_Stmts: Func_Stmt
   40           | Func_Stmts Func_Stmt

   41 Func_Stmt: Assign_Stmt
   42          | Return_Stmt
   43          | Print_Stmt

   44 Return_Stmt: T_Return Expr ';'

   45 Print_Stmt: T_Print '(' T_StringConstant Print_Args ')' ';'

   46 Print_Args: %empty
   47           | Print_Args ',' Expr

   48 ArgLst: %empty
   49       | ArgLst_

   50 ArgLst_: TYPE T_Identifier
   51        | ArgLst_ ',' TYPE T_Identifier

   52 Expr: Expr '+' Expr
   53     | Expr '-' Expr
   54     | Expr '*' Expr
   55     | Expr '/' Expr
   56     | Expr '%' Expr
   57     | Expr '>' Expr
   58     | Expr '<' Expr
   59     | '(' Expr ')'
   60     | Expr T_Ge Expr
   61     | Expr T_Le Expr
   62     | Expr T_Eq Expr
   63     | Expr T_Ne Expr
   64     | Expr T_Or Expr
   65     | Expr T_And Expr
   66     | Expr '(' ExprN_1 ')'
   67     | Expr '[' SliceExpr ']'
   68     | Expr '[' ExprN_1 ']'
   69     | '*'
   70     | '-' Expr
   71     | T_IntConstant
   72     | T_True
   73     | T_False
   74     | T_Identifier
   75     | '(' ExprN ')'
   76     | Proc
   77     | Mem
   78     | Expr '.' Prop
   79     | Expr '?' Expr ':' Expr
   80     | '*' Expr
   81     | T_Tuple '(' Expr T_For T_Identifier T_In Expr ')'

   82 SliceExpr: Expr ':' Expr
   83          | ':' Expr
   84          | Expr ':'
   85          | ':'

   86 ExprN_1: Expr
   87        | ExprN_1 ',' Expr

   88 ExprN: Expr ',' Expr
   89      | ExprN ',' Expr

   90 Prop: T_Size
   91     | T_Split
   92     | T_Merge
   93     | T_Swap
   94     | T_Slice
   95     | T_Reverse
   96     | T_Balance_split
   97     | T_Auto_split
   98     | T_Greedy_split
   99     | T_Volume
  100     | T_Has
  101     | T_Len
  102     | T_TaskIPoint
  103     | T_TaskISpace
  104     | T_TaskParent
  105     | T_TaskProcessor

  106 TYPE: T_Int
  107     | T_Bool
  108     | T_IPoint
  109     | T_ISpace
  110     | T_MSpace

  111 ProcLst: Proc
  112        | ProcLst ',' Proc

  113 MemLst: Mem
  114       | MemLst ',' Mem

  115 Mem: T_SYSMEM
  116    | T_FBMEM
  117    | T_RDMEM
  118    | T_ZCMEM
  119    | T_SOCKMEM

  120 Proc: T_CPU
  121     | T_GPU
  122     | T_IO
  123     | T_PY
  124     | T_PROC
  125     | T_OMP


Terminals, with rules where they appear

    $end (0) 0
    '!' (33)
    '%' (37) 56
    '(' (40) 35 45 59 66 75 81
    ')' (41) 35 45 59 66 75 81
    '*' (42) 13 54 69 80
    '+' (43) 52
    ',' (44) 14 15 47 51 87 88 89 112 114
    '-' (45) 53 70
    '.' (46) 78
    '/' (47) 55
    ':' (58) 79 82 83 84 85
    ';' (59) 16 17 18 19 20 21 22 36 37 38 44 45
    '<' (60) 29 58
    '=' (61) 38
    '>' (62) 31 57
    '?' (63) 79
    '[' (91) 67 68
    ']' (93) 67 68
    '{' (123) 35
    '}' (125) 35
    error (256)
    T_Size (258) 90
    T_Split (259) 91
    T_Merge (260) 92
    T_Swap (261) 93
    T_Slice (262) 94
    T_Reverse (263) 95
    T_Balance_split (264) 96
    T_Auto_split (265) 97
    T_Greedy_split (266) 98
    T_Volume (267) 99
    T_Has (268) 100
    T_Tuple (269) 81
    T_For (270) 81
    T_In (271) 81
    T_Len (272) 101
    T_TaskIPoint (273) 102
    T_TaskISpace (274) 103
    T_TaskParent (275) 104
    T_TaskProcessor (276) 105
    T_Reverse_Dimension (277) 24
    T_Positive_Dimension (278) 25
    T_AOS (279) 26
    T_SOA (280) 27
    T_Compact (281) 28
    T_Align (282) 29 30 31 32 33 34
    T_CPU (283) 120
    T_GPU (284) 121
    T_IO (285) 122
    T_PY (286) 123
    T_PROC (287) 124
    T_OMP (288) 125
    T_SYSMEM (289) 115
    T_FBMEM (290) 116
    T_RDMEM (291) 117
    T_ZCMEM (292) 118
    T_SOCKMEM (293) 119
    T_Int (294) 106
    T_Bool (295) 107
    T_IPoint (296) 108
    T_ISpace (297) 109
    T_MSpace (298) 110
    T_Def (299) 35
    T_Return (300) 44
    T_True (301) 72
    T_False (302) 73
    T_Task (303) 18
    T_Region (304) 19 20
    T_Layout (305) 21 22
    T_IndexTaskMap (306) 36 37
    T_Print (307) 45
    T_Instance (308) 16
    T_Collect (309) 17
    T_Le (310) 30 61
    T_Ge (311) 32 60
    T_Eq (312) 33 62
    T_Ne (313) 34 63
    T_And (314) 65
    T_Or (315) 64
    T_Identifier <string> (316) 12 14 15 16 35 36 37 38 50 51 74 81
    T_StringConstant <string> (317) 45
    T_IntConstant <intVal> (318) 16 29 30 31 32 33 34 71


Nonterminals, with rules where they appear

    $accept (84)
        on left: 0
    Program <program> (85)
        on left: 1 2
        on right: 0 2
    Stmt <stmt> (86)
        on left: 3 4 5 6 7 8 9 10 11
        on right: 1 2
    Identifier_star <string> (87)
        on left: 12 13
        on right: 17 18 19 20 21 22 36
    Identifier_List <stringlist> (88)
        on left: 14 15
        on right: 15 37
    InstanceLimit <instancelimit> (89)
        on left: 16
        on right: 6
    MemoryCollect <memorycollect> (90)
        on left: 17
        on right: 7
    ProcCustom <proccustom> (91)
        on left: 18
        on right: 3
    RegionCustom <regioncustom> (92)
        on left: 19 20
        on right: 4
    LayoutCustom <layoutcustom> (93)
        on left: 21 22
        on right: 5
    Constraints <constraints> (94)
        on left: 23 24 25 26 27 28 29 30 31 32 33 34
        on right: 21 22 24 25 26 27 28 29 30 31 32 33 34
    FuncDef <funcdef> (95)
        on left: 35
        on right: 8
    IndexTaskMap <indextaskmap> (96)
        on left: 36 37
        on right: 9
    Assign_Stmt <assign> (97)
        on left: 38
        on right: 10 41
    Func_Stmts <funcstmt> (98)
        on left: 39 40
        on right: 35 40
    Func_Stmt <stmt> (99)
        on left: 41 42 43
        on right: 39 40
    Return_Stmt <returnstmt> (100)
        on left: 44
        on right: 42
    Print_Stmt <printstmt> (101)
        on left: 45
        on right: 11 43
    Print_Args <printargs> (102)
        on left: 46 47
        on right: 45 47
    ArgLst <args> (103)
        on left: 48 49
        on right: 35
    ArgLst_ <args> (104)
        on left: 50 51
        on right: 49 51
    Expr <expr> (105)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
        on right: 38 44 47 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 70 78 79 80 81 82 83 84 86 87 88 89
    SliceExpr <sliceexpr> (106)
        on left: 82 83 84 85
        on right: 67
    ExprN_1 <exprn> (107)
        on left: 86 87
        on right: 66 68 87
    ExprN <exprn> (108)
        on left: 88 89
        on right: 75 89
    Prop <prop> (109)
        on left: 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
        on right: 78
    TYPE <argtype> (110)
        on left: 106 107 108 109 110
        on right: 50 51
    ProcLst <proclst> (111)
        on left: 111 112
        on right: 18 112
    MemLst <memlst> (112)
        on left: 113 114
        on right: 19 20 114
    Mem <mem> (113)
        on left: 115 116 117 118 119
        on right: 21 77 113 114
    Proc <proc> (114)
        on left: 120 121 122 123 124 125
        on right: 16 19 76 111 112


State 0

    0 $accept: . Program $end

    T_Def           shift, and go to state 1
    T_Task          shift, and go to state 2
    T_Region        shift, and go to state 3
    T_Layout        shift, and go to state 4
    T_IndexTaskMap  shift, and go to state 5
    T_Print         shift, and go to state 6
    T_Instance      shift, and go to state 7
    T_Collect       shift, and go to state 8
    T_Identifier    shift, and go to state 9

    Program        go to state 10
    Stmt           go to state 11
    InstanceLimit  go to state 12
    MemoryCollect  go to state 13
    ProcCustom     go to state 14
    RegionCustom   go to state 15
    LayoutCustom   go to state 16
    FuncDef        go to state 17
    IndexTaskMap   go to state 18
    Assign_Stmt    go to state 19
    Print_Stmt     go to state 20


State 1

   35 FuncDef: T_Def . T_Identifier '(' ArgLst ')' '{' Func_Stmts '}'

    T_Identifier  shift, and go to state 21


State 2

   18 ProcCustom: T_Task . Identifier_star ProcLst ';'

    T_Identifier  shift, and go to state 22
    '*'           shift, and go to state 23

    Identifier_star  go to state 24


State 3

   19 RegionCustom: T_Region . Identifier_star Identifier_star Proc MemLst ';'
   20             | T_Region . Identifier_star Identifier_star Identifier_star MemLst ';'

    T_Identifier  shift, and go to state 22
    '*'           shift, and go to state 23

    Identifier_star  go to state 25


State 4

   21 LayoutCustom: T_Layout . Identifier_star Identifier_star Mem Constraints ';'
   22             | T_Layout . Identifier_star Identifier_star Identifier_star Constraints ';'

    T_Identifier  shift, and go to state 22
    '*'           shift, and go to state 23

    Identifier_star  go to state 26


State 5

   36 IndexTaskMap: T_IndexTaskMap . Identifier_star T_Identifier ';'
   37             | T_IndexTaskMap . Identifier_List T_Identifier ';'

    T_Identifier  shift, and go to state 27
    '*'           shift, and go to state 23

    Identifier_star  go to state 28
    Identifier_List  go to state 29


State 6

   45 Print_Stmt: T_Print . '(' T_StringConstant Print_Args ')' ';'

    '('  shift, and go to state 30


State 7

   16 InstanceLimit: T_Instance . T_Identifier Proc T_IntConstant ';'

    T_Identifier  shift, and go to state 31


State 8

   17 MemoryCollect: T_Collect . Identifier_star Identifier_star ';'

    T_Identifier  shift, and go to state 22
    '*'           shift, and go to state 23

    Identifier_star  go to state 32


State 9

   38 Assign_Stmt: T_Identifier . '=' Expr ';'

    '='  shift, and go to state 33


State 10

    0 $accept: Program . $end
    2 Program: Program . Stmt

    $end            shift, and go to state 34
    T_Def           shift, and go to state 1
    T_Task          shift, and go to state 2
    T_Region        shift, and go to state 3
    T_Layout        shift, and go to state 4
    T_IndexTaskMap  shift, and go to state 5
    T_Print         shift, and go to state 6
    T_Instance      shift, and go to state 7
    T_Collect       shift, and go to state 8
    T_Identifier    shift, and go to state 9

    Stmt           go to state 35
    InstanceLimit  go to state 12
    MemoryCollect  go to state 13
    ProcCustom     go to state 14
    RegionCustom   go to state 15
    LayoutCustom   go to state 16
    FuncDef        go to state 17
    IndexTaskMap   go to state 18
    Assign_Stmt    go to state 19
    Print_Stmt     go to state 20


State 11

    1 Program: Stmt .

    $default  reduce using rule 1 (Program)


State 12

    6 Stmt: InstanceLimit .

    $default  reduce using rule 6 (Stmt)


State 13

    7 Stmt: MemoryCollect .

    $default  reduce using rule 7 (Stmt)


State 14

    3 Stmt: ProcCustom .

    $default  reduce using rule 3 (Stmt)


State 15

    4 Stmt: RegionCustom .

    $default  reduce using rule 4 (Stmt)


State 16

    5 Stmt: LayoutCustom .

    $default  reduce using rule 5 (Stmt)


State 17

    8 Stmt: FuncDef .

    $default  reduce using rule 8 (Stmt)


State 18

    9 Stmt: IndexTaskMap .

    $default  reduce using rule 9 (Stmt)


State 19

   10 Stmt: Assign_Stmt .

    $default  reduce using rule 10 (Stmt)


State 20

   11 Stmt: Print_Stmt .

    $default  reduce using rule 11 (Stmt)


State 21

   35 FuncDef: T_Def T_Identifier . '(' ArgLst ')' '{' Func_Stmts '}'

    '('  shift, and go to state 36


State 22

   12 Identifier_star: T_Identifier .

    $default  reduce using rule 12 (Identifier_star)


State 23

   13 Identifier_star: '*' .

    $default  reduce using rule 13 (Identifier_star)


State 24

   18 ProcCustom: T_Task Identifier_star . ProcLst ';'

    T_CPU   shift, and go to state 37
    T_GPU   shift, and go to state 38
    T_IO    shift, and go to state 39
    T_PY    shift, and go to state 40
    T_PROC  shift, and go to state 41
    T_OMP   shift, and go to state 42

    ProcLst  go to state 43
    Proc     go to state 44


State 25

   19 RegionCustom: T_Region Identifier_star . Identifier_star Proc MemLst ';'
   20             | T_Region Identifier_star . Identifier_star Identifier_star MemLst ';'

    T_Identifier  shift, and go to state 22
    '*'           shift, and go to state 23

    Identifier_star  go to state 45


State 26

   21 LayoutCustom: T_Layout Identifier_star . Identifier_star Mem Constraints ';'
   22             | T_Layout Identifier_star . Identifier_star Identifier_star Constraints ';'

    T_Identifier  shift, and go to state 22
    '*'           shift, and go to state 23

    Identifier_star  go to state 46


State 27

   12 Identifier_star: T_Identifier .
   14 Identifier_List: T_Identifier . ',' T_Identifier

    ','  shift, and go to state 47

    $default  reduce using rule 12 (Identifier_star)


State 28

   36 IndexTaskMap: T_IndexTaskMap Identifier_star . T_Identifier ';'

    T_Identifier  shift, and go to state 48


State 29

   15 Identifier_List: Identifier_List . ',' T_Identifier
   37 IndexTaskMap: T_IndexTaskMap Identifier_List . T_Identifier ';'

    T_Identifier  shift, and go to state 49
    ','           shift, and go to state 50


State 30

   45 Print_Stmt: T_Print '(' . T_StringConstant Print_Args ')' ';'

    T_StringConstant  shift, and go to state 51


State 31

   16 InstanceLimit: T_Instance T_Identifier . Proc T_IntConstant ';'

    T_CPU   shift, and go to state 37
    T_GPU   shift, and go to state 38
    T_IO    shift, and go to state 39
    T_PY    shift, and go to state 40
    T_PROC  shift, and go to state 41
    T_OMP   shift, and go to state 42

    Proc  go to state 52


State 32

   17 MemoryCollect: T_Collect Identifier_star . Identifier_star ';'

    T_Identifier  shift, and go to state 22
    '*'           shift, and go to state 23

    Identifier_star  go to state 53


State 33

   38 Assign_Stmt: T_Identifier '=' . Expr ';'

    T_Tuple        shift, and go to state 54
    T_CPU          shift, and go to state 37
    T_GPU          shift, and go to state 38
    T_IO           shift, and go to state 39
    T_PY           shift, and go to state 40
    T_PROC         shift, and go to state 41
    T_OMP          shift, and go to state 42
    T_SYSMEM       shift, and go to state 55
    T_FBMEM        shift, and go to state 56
    T_RDMEM        shift, and go to state 57
    T_ZCMEM        shift, and go to state 58
    T_SOCKMEM      shift, and go to state 59
    T_True         shift, and go to state 60
    T_False        shift, and go to state 61
    T_Identifier   shift, and go to state 62
    T_IntConstant  shift, and go to state 63
    '-'            shift, and go to state 64
    '*'            shift, and go to state 65
    '('            shift, and go to state 66

    Expr  go to state 67
    Mem   go to state 68
    Proc  go to state 69


State 34

    0 $accept: Program $end .

    $default  accept


State 35

    2 Program: Program Stmt .

    $default  reduce using rule 2 (Program)


State 36

   35 FuncDef: T_Def T_Identifier '(' . ArgLst ')' '{' Func_Stmts '}'

    T_Int     shift, and go to state 70
    T_Bool    shift, and go to state 71
    T_IPoint  shift, and go to state 72
    T_ISpace  shift, and go to state 73
    T_MSpace  shift, and go to state 74

    $default  reduce using rule 48 (ArgLst)

    ArgLst   go to state 75
    ArgLst_  go to state 76
    TYPE     go to state 77


State 37

  120 Proc: T_CPU .

    $default  reduce using rule 120 (Proc)


State 38

  121 Proc: T_GPU .

    $default  reduce using rule 121 (Proc)


State 39

  122 Proc: T_IO .

    $default  reduce using rule 122 (Proc)


State 40

  123 Proc: T_PY .

    $default  reduce using rule 123 (Proc)


State 41

  124 Proc: T_PROC .

    $default  reduce using rule 124 (Proc)


State 42

  125 Proc: T_OMP .

    $default  reduce using rule 125 (Proc)


State 43

   18 ProcCustom: T_Task Identifier_star ProcLst . ';'
  112 ProcLst: ProcLst . ',' Proc

    ','  shift, and go to state 78
    ';'  shift, and go to state 79


State 44

  111 ProcLst: Proc .

    $default  reduce using rule 111 (ProcLst)


State 45

   19 RegionCustom: T_Region Identifier_star Identifier_star . Proc MemLst ';'
   20             | T_Region Identifier_star Identifier_star . Identifier_star MemLst ';'

    T_CPU         shift, and go to state 37
    T_GPU         shift, and go to state 38
    T_IO          shift, and go to state 39
    T_PY          shift, and go to state 40
    T_PROC        shift, and go to state 41
    T_OMP         shift, and go to state 42
    T_Identifier  shift, and go to state 22
    '*'           shift, and go to state 23

    Identifier_star  go to state 80
    Proc             go to state 81


State 46

   21 LayoutCustom: T_Layout Identifier_star Identifier_star . Mem Constraints ';'
   22             | T_Layout Identifier_star Identifier_star . Identifier_star Constraints ';'

    T_SYSMEM      shift, and go to state 55
    T_FBMEM       shift, and go to state 56
    T_RDMEM       shift, and go to state 57
    T_ZCMEM       shift, and go to state 58
    T_SOCKMEM     shift, and go to state 59
    T_Identifier  shift, and go to state 22
    '*'           shift, and go to state 23

    Identifier_star  go to state 82
    Mem              go to state 83


State 47

   14 Identifier_List: T_Identifier ',' . T_Identifier

    T_Identifier  shift, and go to state 84


State 48

   36 IndexTaskMap: T_IndexTaskMap Identifier_star T_Identifier . ';'

    ';'  shift, and go to state 85


State 49

   37 IndexTaskMap: T_IndexTaskMap Identifier_List T_Identifier . ';'

    ';'  shift, and go to state 86


State 50

   15 Identifier_List: Identifier_List ',' . T_Identifier

    T_Identifier  shift, and go to state 87


State 51

   45 Print_Stmt: T_Print '(' T_StringConstant . Print_Args ')' ';'

    $default  reduce using rule 46 (Print_Args)

    Print_Args  go to state 88


State 52

   16 InstanceLimit: T_Instance T_Identifier Proc . T_IntConstant ';'

    T_IntConstant  shift, and go to state 89


State 53

   17 MemoryCollect: T_Collect Identifier_star Identifier_star . ';'

    ';'  shift, and go to state 90


State 54

   81 Expr: T_Tuple . '(' Expr T_For T_Identifier T_In Expr ')'

    '('  shift, and go to state 91


State 55

  115 Mem: T_SYSMEM .

    $default  reduce using rule 115 (Mem)


State 56

  116 Mem: T_FBMEM .

    $default  reduce using rule 116 (Mem)


State 57

  117 Mem: T_RDMEM .

    $default  reduce using rule 117 (Mem)


State 58

  118 Mem: T_ZCMEM .

    $default  reduce using rule 118 (Mem)


State 59

  119 Mem: T_SOCKMEM .

    $default  reduce using rule 119 (Mem)


State 60

   72 Expr: T_True .

    $default  reduce using rule 72 (Expr)


State 61

   73 Expr: T_False .

    $default  reduce using rule 73 (Expr)


State 62

   74 Expr: T_Identifier .

    $default  reduce using rule 74 (Expr)


State 63

   71 Expr: T_IntConstant .

    $default  reduce using rule 71 (Expr)


State 64

   70 Expr: '-' . Expr

    T_Tuple        shift, and go to state 54
    T_CPU          shift, and go to state 37
    T_GPU          shift, and go to state 38
    T_IO           shift, and go to state 39
    T_PY           shift, and go to state 40
    T_PROC         shift, and go to state 41
    T_OMP          shift, and go to state 42
    T_SYSMEM       shift, and go to state 55
    T_FBMEM        shift, and go to state 56
    T_RDMEM        shift, and go to state 57
    T_ZCMEM        shift, and go to state 58
    T_SOCKMEM      shift, and go to state 59
    T_True         shift, and go to state 60
    T_False        shift, and go to state 61
    T_Identifier   shift, and go to state 62
    T_IntConstant  shift, and go to state 63
    '-'            shift, and go to state 64
    '*'            shift, and go to state 65
    '('            shift, and go to state 66

    Expr  go to state 92
    Mem   go to state 68
    Proc  go to state 69


State 65

   69 Expr: '*' .
   80     | '*' . Expr

    T_Tuple        shift, and go to state 54
    T_CPU          shift, and go to state 37
    T_GPU          shift, and go to state 38
    T_IO           shift, and go to state 39
    T_PY           shift, and go to state 40
    T_PROC         shift, and go to state 41
    T_OMP          shift, and go to state 42
    T_SYSMEM       shift, and go to state 55
    T_FBMEM        shift, and go to state 56
    T_RDMEM        shift, and go to state 57
    T_ZCMEM        shift, and go to state 58
    T_SOCKMEM      shift, and go to state 59
    T_True         shift, and go to state 60
    T_False        shift, and go to state 61
    T_Identifier   shift, and go to state 62
    T_IntConstant  shift, and go to state 63
    '('            shift, and go to state 66

    $default  reduce using rule 69 (Expr)

    Expr  go to state 93
    Mem   go to state 68
    Proc  go to state 69


State 66

   59 Expr: '(' . Expr ')'
   75     | '(' . ExprN ')'

    T_Tuple        shift, and go to state 54
    T_CPU          shift, and go to state 37
    T_GPU          shift, and go to state 38
    T_IO           shift, and go to state 39
    T_PY           shift, and go to state 40
    T_PROC         shift, and go to state 41
    T_OMP          shift, and go to state 42
    T_SYSMEM       shift, and go to state 55
    T_FBMEM        shift, and go to state 56
    T_RDMEM        shift, and go to state 57
    T_ZCMEM        shift, and go to state 58
    T_SOCKMEM      shift, and go to state 59
    T_True         shift, and go to state 60
    T_False        shift, and go to state 61
    T_Identifier   shift, and go to state 62
    T_IntConstant  shift, and go to state 63
    '-'            shift, and go to state 64
    '*'            shift, and go to state 65
    '('            shift, and go to state 66

    Expr   go to state 94
    ExprN  go to state 95
    Mem    go to state 68
    Proc   go to state 69


State 67

   38 Assign_Stmt: T_Identifier '=' Expr . ';'
   52 Expr: Expr . '+' Expr
   53     | Expr . '-' Expr
   54     | Expr . '*' Expr
   55     | Expr . '/' Expr
   56     | Expr . '%' Expr
   57     | Expr . '>' Expr
   58     | Expr . '<' Expr
   60     | Expr . T_Ge Expr
   61     | Expr . T_Le Expr
   62     | Expr . T_Eq Expr
   63     | Expr . T_Ne Expr
   64     | Expr . T_Or Expr
   65     | Expr . T_And Expr
   66     | Expr . '(' ExprN_1 ')'
   67     | Expr . '[' SliceExpr ']'
   68     | Expr . '[' ExprN_1 ']'
   78     | Expr . '.' Prop
   79     | Expr . '?' Expr ':' Expr

    T_Le   shift, and go to state 96
    T_Ge   shift, and go to state 97
    T_Eq   shift, and go to state 98
    T_Ne   shift, and go to state 99
    T_And  shift, and go to state 100
    T_Or   shift, and go to state 101
    '?'    shift, and go to state 102
    '<'    shift, and go to state 103
    '>'    shift, and go to state 104
    '+'    shift, and go to state 105
    '-'    shift, and go to state 106
    '*'    shift, and go to state 107
    '/'    shift, and go to state 108
    '%'    shift, and go to state 109
    '['    shift, and go to state 110
    '('    shift, and go to state 111
    '.'    shift, and go to state 112
    ';'    shift, and go to state 113


State 68

   77 Expr: Mem .

    $default  reduce using rule 77 (Expr)


State 69

   76 Expr: Proc .

    $default  reduce using rule 76 (Expr)


State 70

  106 TYPE: T_Int .

    $default  reduce using rule 106 (TYPE)


State 71

  107 TYPE: T_Bool .

    $default  reduce using rule 107 (TYPE)


State 72

  108 TYPE: T_IPoint .

    $default  reduce using rule 108 (TYPE)


State 73

  109 TYPE: T_ISpace .

    $default  reduce using rule 109 (TYPE)


State 74

  110 TYPE: T_MSpace .

    $default  reduce using rule 110 (TYPE)


State 75

   35 FuncDef: T_Def T_Identifier '(' ArgLst . ')' '{' Func_Stmts '}'

    ')'  shift, and go to state 114


State 76

   49 ArgLst: ArgLst_ .
   51 ArgLst_: ArgLst_ . ',' TYPE T_Identifier

    ','  shift, and go to state 115

    $default  reduce using rule 49 (ArgLst)


State 77

   50 ArgLst_: TYPE . T_Identifier

    T_Identifier  shift, and go to state 116


State 78

  112 ProcLst: ProcLst ',' . Proc

    T_CPU   shift, and go to state 37
    T_GPU   shift, and go to state 38
    T_IO    shift, and go to state 39
    T_PY    shift, and go to state 40
    T_PROC  shift, and go to state 41
    T_OMP   shift, and go to state 42

    Proc  go to state 117


State 79

   18 ProcCustom: T_Task Identifier_star ProcLst ';' .

    $default  reduce using rule 18 (ProcCustom)


State 80

   20 RegionCustom: T_Region Identifier_star Identifier_star Identifier_star . MemLst ';'

    T_SYSMEM   shift, and go to state 55
    T_FBMEM    shift, and go to state 56
    T_RDMEM    shift, and go to state 57
    T_ZCMEM    shift, and go to state 58
    T_SOCKMEM  shift, and go to state 59

    MemLst  go to state 118
    Mem     go to state 119


State 81

   19 RegionCustom: T_Region Identifier_star Identifier_star Proc . MemLst ';'

    T_SYSMEM   shift, and go to state 55
    T_FBMEM    shift, and go to state 56
    T_RDMEM    shift, and go to state 57
    T_ZCMEM    shift, and go to state 58
    T_SOCKMEM  shift, and go to state 59

    MemLst  go to state 120
    Mem     go to state 119


State 82

   22 LayoutCustom: T_Layout Identifier_star Identifier_star Identifier_star . Constraints ';'

    $default  reduce using rule 23 (Constraints)

    Constraints  go to state 121


State 83

   21 LayoutCustom: T_Layout Identifier_star Identifier_star Mem . Constraints ';'

    $default  reduce using rule 23 (Constraints)

    Constraints  go to state 122


State 84

   14 Identifier_List: T_Identifier ',' T_Identifier .

    $default  reduce using rule 14 (Identifier_List)


State 85

   36 IndexTaskMap: T_IndexTaskMap Identifier_star T_Identifier ';' .

    $default  reduce using rule 36 (IndexTaskMap)


State 86

   37 IndexTaskMap: T_IndexTaskMap Identifier_List T_Identifier ';' .

    $default  reduce using rule 37 (IndexTaskMap)


State 87

   15 Identifier_List: Identifier_List ',' T_Identifier .

    $default  reduce using rule 15 (Identifier_List)


State 88

   45 Print_Stmt: T_Print '(' T_StringConstant Print_Args . ')' ';'
   47 Print_Args: Print_Args . ',' Expr

    ','  shift, and go to state 123
    ')'  shift, and go to state 124


State 89

   16 InstanceLimit: T_Instance T_Identifier Proc T_IntConstant . ';'

    ';'  shift, and go to state 125


State 90

   17 MemoryCollect: T_Collect Identifier_star Identifier_star ';' .

    $default  reduce using rule 17 (MemoryCollect)


State 91

   81 Expr: T_Tuple '(' . Expr T_For T_Identifier T_In Expr ')'

    T_Tuple        shift, and go to state 54
    T_CPU          shift, and go to state 37
    T_GPU          shift, and go to state 38
    T_IO           shift, and go to state 39
    T_PY           shift, and go to state 40
    T_PROC         shift, and go to state 41
    T_OMP          shift, and go to state 42
    T_SYSMEM       shift, and go to state 55
    T_FBMEM        shift, and go to state 56
    T_RDMEM        shift, and go to state 57
    T_ZCMEM        shift, and go to state 58
    T_SOCKMEM      shift, and go to state 59
    T_True         shift, and go to state 60
    T_False        shift, and go to state 61
    T_Identifier   shift, and go to state 62
    T_IntConstant  shift, and go to state 63
    '-'            shift, and go to state 64
    '*'            shift, and go to state 65
    '('            shift, and go to state 66

    Expr  go to state 126
    Mem   go to state 68
    Proc  go to state 69


State 92

   52 Expr: Expr . '+' Expr
   53     | Expr . '-' Expr
   54     | Expr . '*' Expr
   55     | Expr . '/' Expr
   56     | Expr . '%' Expr
   57     | Expr . '>' Expr
   58     | Expr . '<' Expr
   60     | Expr . T_Ge Expr
   61     | Expr . T_Le Expr
   62     | Expr . T_Eq Expr
   63     | Expr . T_Ne Expr
   64     | Expr . T_Or Expr
   65     | Expr . T_And Expr
   66     | Expr . '(' ExprN_1 ')'
   67     | Expr . '[' SliceExpr ']'
   68     | Expr . '[' ExprN_1 ']'
   70     | '-' Expr .
   78     | Expr . '.' Prop
   79     | Expr . '?' Expr ':' Expr

    '['  shift, and go to state 110
    '('  shift, and go to state 111
    '.'  shift, and go to state 112

    $default  reduce using rule 70 (Expr)


State 93

   52 Expr: Expr . '+' Expr
   53     | Expr . '-' Expr
   54     | Expr . '*' Expr
   55     | Expr . '/' Expr
   56     | Expr . '%' Expr
   57     | Expr . '>' Expr
   58     | Expr . '<' Expr
   60     | Expr . T_Ge Expr
   61     | Expr . T_Le Expr
   62     | Expr . T_Eq Expr
   63     | Expr . T_Ne Expr
   64     | Expr . T_Or Expr
   65     | Expr . T_And Expr
   66     | Expr . '(' ExprN_1 ')'
   67     | Expr . '[' SliceExpr ']'
   68     | Expr . '[' ExprN_1 ']'
   78     | Expr . '.' Prop
   79     | Expr . '?' Expr ':' Expr
   80     | '*' Expr .

    '['  shift, and go to state 110
    '('  shift, and go to state 111
    '.'  shift, and go to state 112

    $default  reduce using rule 80 (Expr)


State 94

   52 Expr: Expr . '+' Expr
   53     | Expr . '-' Expr
   54     | Expr . '*' Expr
   55     | Expr . '/' Expr
   56     | Expr . '%' Expr
   57     | Expr . '>' Expr
   58     | Expr . '<' Expr
   59     | '(' Expr . ')'
   60     | Expr . T_Ge Expr
   61     | Expr . T_Le Expr
   62     | Expr . T_Eq Expr
   63     | Expr . T_Ne Expr
   64     | Expr . T_Or Expr
   65     | Expr . T_And Expr
   66     | Expr . '(' ExprN_1 ')'
   67     | Expr . '[' SliceExpr ']'
   68     | Expr . '[' ExprN_1 ']'
   78     | Expr . '.' Prop
   79     | Expr . '?' Expr ':' Expr
   88 ExprN: Expr . ',' Expr
